--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".OnlineGameActivity"></activity>
+        <activity android:name=".modular.OfflineGameActivity"
+                  android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".OnlineGameActivity" />
         <activity android:name=".RoomActivity" />
         <activity android:name=".PlayerModeActivity" />
         <activity
